--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
     id 'war'
+    id 'com.ewerk.gradle.plugins.querydsl' version '1.0.10'
 }
 
 group = 'org.zerock'
@@ -14,6 +15,8 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+
+    querydsl.extendsFrom compileClassPath
 }
 
 repositories {
@@ -31,7 +34,22 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client'
     implementation group: 'org.thymeleaf.extras', name: 'thymeleaf-extras-java8time'
+    implementation 'com.querydsl:querydsl-jpa'
+}
 
+def querydslDir = "$buildDir/generated/querydsl"
+
+querydsl {
+    jpa = true
+    querydslSourcesDir = querydslDir
+}
+
+sourceSets {
+    main.java.srcDir querydslDir
+}
+
+compileQuerydsl {
+    options.annotationProcessorPath = configurations.querydsl
 }
 
 test {
